My First Idea to GIT integration

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -84,7 +84,8 @@
 
         <button>Submit your taco</button>
     </div>
-    <!-- tag::closeFormTag[] -->
+
+    <!-- FUCK -->
 </form>
 <!-- end::closeFormTag[] -->
 </body>
