My First Idea to GIT integration

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -82,7 +82,7 @@
         <!-- tag::all[] -->
         <br/>
 
-        <button>Submit your taco</button>
+        <button>Submit my taco</button>
     </div>
 
     <!-- FUCK -->
